caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/missing_blueprints_keyword.caffeine
for "SLO"
  "test" success_rate(x):
    Requiring { env: String }
    signals { value: "x" }
